[gd_scene load_steps=12 format=3 uid="uid://dldomgejvinaf"]

[ext_resource type="Script" path="res://Escenas/Menus/Buttons/PlayButtonRelay.gd" id="1_262t7"]
[ext_resource type="Texture2D" uid="uid://x886cltnkwtt" path="res://Escenas/Menus/Buttons/PlayButton.png" id="2_65ics"]
[ext_resource type="Script" path="res://Escenas/Menus/Buttons/Button.gd" id="3_7m7tc"]
[ext_resource type="StyleBox" uid="uid://3gjeyh8dsx21" path="res://Escenas/Menus/Buttons/estilo_botones.tres" id="5_hlqpp"]
[ext_resource type="Texture2D" uid="uid://bj7bwvmkomn5f" path="res://Escenas/Menus/Buttons/Singleplayer.png" id="6_fmg1c"]
[ext_resource type="Script" path="res://Escenas/Menus/Buttons/simple_button.gd" id="6_fxjbn"]
[ext_resource type="Texture2D" uid="uid://o8u8k4hlmhev" path="res://Escenas/Menus/Buttons/Multiplayer.png" id="8_yl0v4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_71wjp"]
bg_color = Color(0.301961, 0.27451, 0.278431, 0.862745)

[sub_resource type="Animation" id="Animation_p1s8v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../MPButton:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["mp"]
}

[sub_resource type="Animation" id="Animation_f4xeh"]
resource_name = "slide"
length = 0.34
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_styles/hover:content_margin_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.4, 1),
"update": 0,
"values": [-1.0, 85.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:theme_override_font_sizes/font_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.4, 1),
"update": 0,
"values": [60, 80]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:theme_override_constants/outline_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(0.4, 1),
"update": 1,
"values": [0, 10]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8uuh1"]
_data = {
"RESET": SubResource("Animation_p1s8v"),
"slide": SubResource("Animation_f4xeh")
}

[node name="HBoxContainer" type="HBoxContainer"]
anchors_preset = -1
anchor_right = 0.474
anchor_bottom = 0.116
offset_right = -0.48407
offset_bottom = -0.0880051
size_flags_horizontal = 3
script = ExtResource("1_262t7")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_71wjp")
theme_override_styles/hover = SubResource("StyleBoxFlat_71wjp")
theme_override_styles/focus = SubResource("StyleBoxFlat_71wjp")
text = "Play"
icon = ExtResource("2_65ics")
expand_icon = true
script = ExtResource("3_7m7tc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="MarginContainer/HBoxContainer/PlayButton"]
callback_mode_process = 0
libraries = {
"": SubResource("AnimationLibrary_8uuh1")
}

[node name="SPButton" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = ExtResource("5_hlqpp")
theme_override_styles/hover = ExtResource("5_hlqpp")
theme_override_styles/focus = ExtResource("5_hlqpp")
text = "SinglePlayer"
icon = ExtResource("6_fmg1c")
icon_alignment = 2
expand_icon = true
script = ExtResource("6_fxjbn")

[node name="MPButton" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = ExtResource("5_hlqpp")
theme_override_styles/hover = ExtResource("5_hlqpp")
theme_override_styles/focus = ExtResource("5_hlqpp")
text = "mp"
icon = ExtResource("8_yl0v4")
expand_icon = true
script = ExtResource("6_fxjbn")

[connection signal="animacion_play" from="MarginContainer/HBoxContainer/PlayButton" to="." method="_on_play_button_animacion_play"]
[connection signal="focus_entered" from="MarginContainer/HBoxContainer/PlayButton" to="MarginContainer/HBoxContainer/PlayButton" method="_on_focus_entered"]
[connection signal="focus_exited" from="MarginContainer/HBoxContainer/PlayButton" to="MarginContainer/HBoxContainer/PlayButton" method="_on_focus_exited"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/PlayButton" to="MarginContainer/HBoxContainer/PlayButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/HBoxContainer/PlayButton" to="MarginContainer/HBoxContainer/PlayButton" method="_on_mouse_exited"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/PlayButton" to="MarginContainer/HBoxContainer/PlayButton" method="_on_pressed"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/SPButton" to="MarginContainer/HBoxContainer/SPButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/HBoxContainer/SPButton" to="MarginContainer/HBoxContainer/SPButton" method="_on_mouse_exited"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/SPButton" to="." method="_on_sp_button_pressed"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/MPButton" to="MarginContainer/HBoxContainer/MPButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/HBoxContainer/MPButton" to="MarginContainer/HBoxContainer/MPButton" method="_on_mouse_exited"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MPButton" to="." method="_on_mp_button_pressed"]
